# lang

./: .gitignore  CMakeLists.txt  app.cpp  app.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  logger.hpp  main.cpp  main.cpp.orig  parser.cpp  parser.hpp
assets/: script.lang  script.lang.orig
parser/: CMakeLists.txt  parser.cpp  parser.hpp
shared/: common.hpp
